[package]
name = "gateway_main"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bitcoin = { workspace = true }
dotenv = { workspace = true }
frost = { workspace = true }
gateway_config_parser = { workspace = true }
gateway_flow_processor = { workspace = true }
gateway_local_db_store = { workspace = true }
gateway_server = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
gateway_deposit_verification = { workspace = true }
frost-secp256k1-tr = { workspace = true }
gateway_verifier_client = { workspace = true }
