[package]
name = "gateway_main"
edition = "2024"

[dependencies]
axum = { workspace = true }
bitcoin = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
frost = { workspace = true }
frost-secp256k1-tr = { workspace = true }
futures = { workspace = true }
gateway_config_parser = { workspace = true }
gateway_deposit_verification = { workspace = true }
gateway_flow_processor = { workspace = true }
gateway_local_db_store = { workspace = true }
gateway_server = { workspace = true }
gateway_verifier_client = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
