[package]
name = "runes-utxo-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
persistent_storage = { workspace = true }
gateway_local_db_store = { path = "../local_db_store" }
chrono = { workspace = true }
sqlx = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
