[package]
name = "gateway_config_parser"
edition = "2024"

[dependencies]
dotenv = { workspace = true }
global_utils = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
