[package]
name = "gateway_config_parser"
edition = "2024"

[dependencies]
dotenvy = { workspace = true }
global_utils = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }
spark_client = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
