[package]
name = "gateway_deposit_verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
token-identifier = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
gateway_flow_processor = { workspace = true }
gateway_local_db_store = { workspace = true }
frost = { workspace = true }
gateway_config_parser = { workspace = true }
gateway_rune_transfer = { workspace = true }
gateway_spark_service = { workspace = true }
serde_json = { workspace = true }
