[package]
name = "gateway_deposit_verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
frost = { workspace = true }
futures = { workspace = true }
gateway_flow_processor = { workspace = true }
gateway_local_db_store = { workspace = true }
gateway_rune_transfer = { workspace = true }
gateway_spark_service = { workspace = true }
persistent_storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
token-identifier = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
